# esp-dev-kits

./: .codespellrc  .gitignore  .lbcf.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE-APACHE  README.md  README_CN.md  check_copyright_config.yaml
.gitlab/: CODEOWNERS
.gitlab/ci/: docs.yml
docs/: conf_common.py
docs/en/eol/: eol-boards.rst
docs/en/esp-dualkey/: index.rst  user_guide.rst
docs/en/esp-sensairshuttle/: index.rst  user_guide_v1.0.rst
docs/en/esp-vocat/: index.rst  user_guide_v1.0.rst  user_guide_v1.2.rst
docs/en/esp32-c3-devkit-rust-2/: index.rst  user_guide.rst
docs/en/esp32-c3-lcdkit/: user_guide.rst  user_guide_c3_lcd_ev_board.rst
docs/en/esp32-p4-eye/: index.rst  user_guide.rst
docs/en/esp32-p4-function-ev-board/: user_guide.rst  user_guide_v1.4.rst
docs/en/esp32-p4x-eye/: index.rst  user_guide.rst
docs/en/esp32-p4x-function-ev-board/: index.rst  user_guide.rst
docs/en/esp32-s2-kaluga-1/: index.rst
docs/en/esp32-s3-devkitc-1/: index.rst
docs/en/esp32-s3-lcd-ev-board/: index.rst  user_guide.rst  user_guide_v1.4.rst
docs/en/esp32-s3-usb-otg/: index.rst  user_guide.rst
docs/en/index/: esp32c3-index.inc  esp32p4-index.inc  esp32s3-index.inc
docs/zh_CN/eol/: eol-boards.rst
examples/esp-sensairshuttle/: README.md
examples/esp-sensairshuttle/examples/factory_demo/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/esp-vocat/: README.md
examples/esp32-p4-eye/: README.md
examples/esp32-p4-function-ev-board/: README.md
tools/ci/: astyle-rules.yml  executable-list.txt
(+76 files in other folders)
